# bitnet

./: .gitignore  BITNET_TRAINING_COST_CALCULATOR.md  CONTRIBUTING.md  CRITICAL_FINDING_WD_FIX.md  FINAL_REPORT.txt  FORWARD_BACKWARD_EXPLAINED.md  GPU_TESTING_INDEX.md  GPU_VERIFICATION_PLAN.md  INVESTIGATION_STATUS.md  INVESTIGATION_SUMMARY_FOR_GPU_TESTING.md  INVESTIGATION_TIMELINE.md  PHASE4_HYPOTHESIS_AND_TESTING.md  PHASE4_RESULTS_SUMMARY.md  README.md  README_GPU_VERIFICATION.md  RESIDUAL_CONNECTIONS_ANALYSIS.md  RESIDUAL_CONNECTIONS_SUMMARY.md  RESULTS_INTERPRETATION_GUIDE.md  SCALING_INVESTIGATION.md  SCALING_TEST_FINAL_RESULTS.md  SCALING_TEST_PREDICTIONS.md  SYSTEMATIC_DEBUGGING_FINAL_REPORT.md  SYSTEMATIC_DEBUGGING_PHASE1_3_ANALYSIS.md  TINY_MODEL_EXPERIMENT_PLAN.md  TRAINING_400K_CONFIG.md  TRAINING_CONFIG_95M.md  TRAINING_DURATION_ANALYSIS_PROMPT.md  TRAINING_SCRIPTS_README.md  TRAINING_SCRIPT_PLAN.md  analyze_residual_connections.py  chat_bitnet.py  check_training_status.py  justfile  plot_loss.py  pyproject.toml  pyrightconfig.json  start_arithmetic_experiment.sh  start_tinystories_experiment.sh  start_training_400k.sh  train_bitnet_95m.py  (+5 more)
docs/: TRAINING_SCRIPTS_README.md  VERIFICATION_SUMMARY.md  WEIGHT_QUANT_AND_TRAINING_ANALYSIS.md
examples/: analyze_training_dynamics.py  run_scaling_tests.sh  sanity_checks.py  test_model_scaling.py  track_degeneration.py  train_aggressive_grad_clip.py  train_reduced_lr.py  train_simple.py  train_stage1_only.py  train_with_label_smoothing.py  verify_quant_consistency.py
experiments/: TINY_EXPERIMENTS_README.md
(+38 files in other folders)
