[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bitnet"
description = "A PyTorch implementation of BitNet b1.58 with ternary weight quantization"
authors = [{name = "Dan Grigsby"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.9.1",
]
dynamic = ["version"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
