[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bitnet"
description = "A PyTorch implementation of BitNet b1.58 with ternary weight quantization"
authors = [{name = "Dan Grigsby"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.9.1,<3",
    "numpy>=1.24.0,<2",
    "transformers>=4.57.3,<5",
    "sentencepiece>=0.1.99,<1",
    "datasets>=2.14.0,<3",
    "protobuf>=3.20.0,<7",
    "tqdm>=4.65.0,<5",
]
dynamic = ["version"]

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=9.0.1,<10",
]
